# making_timetable

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  README.md  STATUS.md  bash.exe.stackdump  biome.jsonc  build_error.txt  build_error_utf8.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.js  tsconfig.app.json  tsconfig.node.json  vite.config.mjs  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
__tests__/: setup.test.ts
assets/: core-PDQicmIm.js  dist-js-3XKto8I8.js  dist-js-BEyId17x.js  index-2K2UrW9T.js  index-B1UHCRV5.js  index-B56XRqP7.js  index-B60Iz9_O.js  index-B6sQt9Os.js  index-B8Xe0EzI.js  index-BDjwLXyl.js  index-BFLM81Ux.js  index-BQDwLdqj.css  index-BQYb6JO5.js  index-B_zt8_5B.css  index-Bc3-sjOi.js  index-BcFAPkcm.js  index-BcGCLJXt.js  index-Bca2Lonj.js  index-BndSRHlB.js  index-Bnyk80Oy.js  index-Bo8BI7t8.js  index-BoEdcDSr.css  index-BoRgTIKs.js  index-BspZ8Fj0.js  index-ByroaDhv.js  index-BzPiX0oa.js  index-BzenrfOg.js  index-C2_GyVBR.js  index-C9P03nWN.js  index-CHsWL0tC.css  index-CMoEeUf3.js  index-CQKNm5-Y.js  index-CS_yO7lW.js  index-CTCetb93.js  index-CUY2fVZm.js  index-CbuFXuns.js  index-D3q04bnC.js  index-D9HymQeX.js  index-DX0X-UgG.js  index-D_fbTsqf.js  (+30 more)
desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml
desktop/python/: ai_engine.py  pyproject.toml  server.py  solver.py
docs/: EXE_DISTRIBUTION_GUIDE.md  MASTER_KNOWLEDGE_BASE.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+240 files in other folders)
