[project]
name = "timetable-server"
version = "0.1.0"
description = "時間割作成ツール バックエンドサーバー"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "ortools>=9.8.0",
    # llama-cpp-python はオプション（ローカルLLM使用時のみ）
    # CPU版:       uv add llama-cpp-python
    # CUDA版:      uv add llama-cpp-python --extra-index-url ...
    # Apple Silicon: CMAKE_ARGS="-DGGML_METAL=on" uv add llama-cpp-python
]

[tool.uv]
# uv run / uv sync でこのディレクトリに .venv を作成する
# uv run python server.py  でサーバーを起動できる
